--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Sign In</title>
+<link rel="stylesheet" href="style.css" >
+    <title></title>
 </head>
 <body>
-    <form action="/" method="post">
-        <table>
-            <tr>
-                <td><label>
-                    username:
-                    </label></td>
-                <td>
-                    <input type="text" name="username" value="" />
-                </td>
-            </tr>
-            <tr>
-                <td><label>
-                   password:
-                    </label></td>
-                <td>
-                    <input type="password" name="pass" value="" />
-                </td>
-            </tr>
-            <tr>
-                <td> <input type="submit" name="Submit" value="login" /></td>
-            </tr>
-        </table>
+<div align="center">
 
-    </form>
+    <form action="/" method="post" class="container">
+    <table>
+	
+        <tr>
+            <td><label>Username:</label></td>
+            <td>
+                <input type="text" name="username" value="" /></td>
+        </tr>
+                <tr>
+            <td><label>Password:</label></td>
+            <td>
+                <input type="password" name="password" value="" /></td>
+        </tr>
+                        <tr>
+  
+            <td colspan="2" align="center">
+                <input type="submit" name="submit" value="Login"  /></td>
+        </tr>
+    </table>
+        </form>
+		</div>
 </body>
 </html>
